--- a/requirements.txt
+++ b/requirements.txt
@@ -28,16 +28,16 @@ torch-spline-conv==1.2.2+pt20cu117
 torch-geometric==2.3.1
 
 # Uncomment when necessary
-# Dev dependencies
-## linting
-flake8==6.1.0
+# # Dev dependencies
+# ## linting
+# flake8==6.1.0
 
-## formatting
-autoflake==2.2.1
-isort==5.12.0
-black==23.9.1
-black[jupyter]
+# ## formatting
+# autoflake==2.2.1
+# isort==5.12.0
+# black==23.9.1
+# black[jupyter]
 
-## testing
-pytest==7.4.2
-pytest-cov==4.1.0
+# ## testing
+# pytest==7.4.2
+# pytest-cov==4.1.0
